@@ -1,15 +1,15 @@
 package io.github.lukas2005.DeviceModApps.coremod;
 
 import io.github.lukas2005.DeviceModApps.OSValidator;
-import net.minecraft.client.gui.Gui;
+import net.minecraft.launchwrapper.Launch;
 import net.minecraft.launchwrapper.LaunchClassLoader;
+import net.minecraft.server.MinecraftServer;
 import net.minecraftforge.fml.common.Loader;
 import net.minecraftforge.fml.relauncher.FMLInjectionData;
 import net.minecraftforge.fml.relauncher.IFMLCallHook;
 import net.minecraftforge.fml.relauncher.IFMLLoadingPlugin;
 
 import javax.annotation.Nullable;
-import java.awt.*;
 import java.io.File;
 import java.io.FileOutputStream;
 import java.io.InputStream;
@@ -23,12 +23,13 @@ public class CoreModMain implements IFMLLoadingPlugin, IFMLCallHook {
 
     public static File minecraftDir;
 
+    public static String urlBase = "https://github.com/lukas2005/Device-Mod-Apps/blob/master/lib/jxbrowser/lib/";
+
     public CoreModMain() {
         if (minecraftDir != null)
             return;
 
         minecraftDir = (File) FMLInjectionData.data()[6];
-        System.out.println("CORE INIT");
     }
 
     @Override
@@ -57,45 +58,51 @@ public class CoreModMain implements IFMLLoadingPlugin, IFMLCallHook {
     }
 
     @Override
-    public Void call() throws Exception {
-        System.out.println("CORE CALL");
-        LaunchClassLoader loader = (LaunchClassLoader) getClass().getClassLoader();
+    public Void call() {
+        if ((Boolean) Launch.blackboard.get("fml.deobfuscatedEnvironment")) return null;
+        try {
+            LaunchClassLoader loader = (LaunchClassLoader) MinecraftServer.class.getClassLoader();
 
-        String urlBase = "http://";
-        String nativeName = "jxbrowser-%s-6.18.jar";
+            String nativeName = "jxbrowser-%s-6.18.jar?raw=true";
 
-        URL nativesUrl;
-        File natives;
-
-        if (OSValidator.isWindows()) {
-            nativeName = String.format(nativeName, "win32");
-        } else if (OSValidator.isMac()) {
-            nativeName = String.format(nativeName, "mac");
-        } else if (OSValidator.isUnix()) {
-            nativeName = String.format(nativeName, "linux64");
-        } else {
-            System.out.println("----------------ERROR UNKNOWN OS: NO NATIVE BINARY AVAILABLE----------------");
-        }
-
-        nativesUrl = new URL(urlBase+nativeName);
-        natives = new File(Paths.get(minecraftDir.getAbsolutePath(), "natives", nativeName).toString());
-
-        if (!natives.exists()) {
-            InputStream is = nativesUrl.openStream();
-            OutputStream os = new FileOutputStream(natives);
-
-            byte[] b = new byte[2048];
-            int length;
-
-            while ((length = is.read(b)) != -1) {
-                os.write(b, 0, length);
-                Gui.drawRect(0, 0, is.available(), 10, new Color(255, 0 ,0).getRGB());
+            if (OSValidator.isWindows()) {
+                nativeName = String.format(nativeName, "win32");
+            } else if (OSValidator.isMac()) {
+                nativeName = String.format(nativeName, "mac");
+            } else if (OSValidator.isUnix()) {
+                nativeName = String.format(nativeName, "linux64");
+            } else {
+                System.err.println("----------------ERROR UNKNOWN OS: NO NATIVE BINARY AVAILABLE----------------");
+                throw new Exception();
             }
-            is.close();
-            os.close();
-        }
 
-        loader.addURL(natives.toURI().toURL());
+            URL nativesUrl = new URL(urlBase + nativeName);
+            File natives = new File(Paths.get(minecraftDir.getAbsolutePath(), "natives", nativeName).toString());
+
+            if (!natives.exists()) {
+                natives.getParentFile().mkdirs();
+                natives.createNewFile();
+
+                InputStream is = nativesUrl.openStream();
+                OutputStream os = new FileOutputStream(natives);
+
+                byte[] b = new byte[2048];
+                int length;
+
+                while ((length = is.read(b)) != -1) {
+                    os.write(b, 0, length);
+                    //Gui.drawRect(0, 0, is.available(), 10, new Color(255, 0, 0).getRGB());
+                    //RenderUtil.drawStringClipped("Downlaoding natives... " + is.available(), 0, 10, 100, new Color(255, 0, 0).getRGB(), false);
+                }
+                is.close();
+                os.close();
+            }
+
+            loader.addURL(natives.toURI().toURL());
+        } catch (Exception e) {
+            System.err.println("----------------ERROR DURING DOWNLOAD OF NATIVES----------------");
+            e.printStackTrace();
+        }
         return null;
     }
 }
